Added Unit Testing and Global Exception Handling